--- a/01-CSS_Transform/assignment/css/_mainpage.scss
+++ b/01-CSS_Transform/assignment/css/_mainpage.scss
@@ -1,7 +1,6 @@
 html {
     box-sizing: border-box;
 }
-
 main {
     margin: 0;
     padding: 0;
@@ -11,5 +10,5 @@ main {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: $c1
+    background: $color1;
 }
