--- a/01-CSS_Transform/assignment/css/_button.scss
+++ b/01-CSS_Transform/assignment/css/_button.scss
@@ -4,8 +4,8 @@
     height: 50px;
     border: none;
     outline: none;
-    color: #fff;
-    background: #111;
+    color: $color2;
+    background: $color9;
     cursor: pointer;
     position: relative;
     z-index: 0;
@@ -13,16 +13,16 @@
 }
 .glow-on-hover:before {
     content: '';
-    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    background: linear-gradient(45deg, $color3, $color4, $color5, $color6, $color7, $color8);
     position: absolute;
     top: -2px;
     left:-2px;
     background-size: 400%;
     z-index: -1;
-    filter: blur(5px);
+    filter: blur(2px);
     width: calc(100% + 4px);
     height: calc(100% + 4px);
-    animation: glowing 20s linear infinite;
+    animation: glowing 10s linear infinite;
     opacity: 0;
     transition: opacity .3s ease-in-out;
     border-radius: 10px;
@@ -38,14 +38,20 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: #111;
+    background: $color9;
     left: 0;
     top: 0;
     border-radius: 10px;
 }
 
 @keyframes glowing {
-    0% { background-position: 0 0; }
-    50% { background-position: 400% 0; }
-    100% { background-position: 0 0; }
+    0% { 
+        background-position: 0 0; 
+    }
+    50% { 
+        background-position: 400% 0; 
+    }
+    100% { 
+        background-position: 0 0; 
+    }
 }
