--- a/01-CSS_Transform/assignment/css/_mainpage.scss
+++ b/01-CSS_Transform/assignment/css/_mainpage.scss
@@ -6,9 +6,6 @@ main {
     padding: 0;
     width: 100%;
     height: 100vh;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
     background: $color1;
+    @include flex();
 }
