--- a/01-CSS_Transform/assignment/css/_variables.scss
+++ b/01-CSS_Transform/assignment/css/_variables.scss
@@ -1,3 +1,20 @@
 //colors
 $color1: black;
 $color2: white;
+$color3: #8ecae6;
+$color4: #219ebc;
+$color5: #126782;
+$color6: #023047;
+$color7: #ffb703;
+$color8: #fb8500;
+$color9: #111;
+
+
+//mixins
+
+@mixin flex {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
