--- a/01-CSS_Transform/assignment/css/style.css
+++ b/01-CSS_Transform/assignment/css/style.css
@@ -7,11 +7,11 @@ main {
   padding: 0;
   width: 100%;
   height: 100vh;
+  background: black;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  background: black;
 }
 
 .glow-on-hover {
@@ -19,7 +19,7 @@ main {
   height: 50px;
   border: none;
   outline: none;
-  color: #fff;
+  color: white;
   background: #111;
   cursor: pointer;
   position: relative;
@@ -29,16 +29,16 @@ main {
 
 .glow-on-hover:before {
   content: "";
-  background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+  background: linear-gradient(45deg, #8ecae6, #219ebc, #126782, #023047, #ffb703, #fb8500);
   position: absolute;
   top: -2px;
   left: -2px;
   background-size: 400%;
   z-index: -1;
-  filter: blur(5px);
+  filter: blur(2px);
   width: calc(100% + 4px);
   height: calc(100% + 4px);
-  animation: glowing 20s linear infinite;
+  animation: glowing 10s linear infinite;
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
   border-radius: 10px;
