--- a/01-CSS_Transform/assignment/css/_button.scss
+++ b/01-CSS_Transform/assignment/css/_button.scss
@@ -1,31 +1,26 @@
 //https://dev.to/webdeasy/top-20-css-buttons-animations-f41//
 .glow-on-hover {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
     width: 220px;
     height: 50px;
     border: none;
     outline: none;
     color: $color2;
-    background: $color9;
+    background: $color8;
     cursor: pointer;
     position: relative;
     z-index: 0;
     border-radius: 10px;
 }
 .glow-on-hover:before {
-    content: '';
-    background: linear-gradient(45deg, $color3, $color4, $color5, $color6, $color7, $color8);
-    position: absolute;
-    top: -2px;
-    left:-2px;
+    @include glow(linear-gradient(45deg, $color5, $color3, $color6, $color3, $color7, $color3, $color4), -2px, -2px, calc(100% + 4px), calc(100% + 4px));
+
     background-size: 400%;
-    z-index: -1;
     filter: blur(2px);
-    width: calc(100% + 4px);
-    height: calc(100% + 4px);
-    animation: glowing 10s linear infinite;
+    animation: glowing 20s ease infinite;
     opacity: 0;
-    transition: opacity .3s ease-in-out;
-    border-radius: 10px;
+    transition: opacity .5s ease-in;
 }
 
 .glow-on-hover:hover:before {
@@ -33,15 +28,8 @@
 }
 
 .glow-on-hover:after {
-    z-index: -1;
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: $color9;
-    left: 0;
-    top: 0;
-    border-radius: 10px;
+    @include glow($color8, 0, 0, 100%, 100%);
+
 }
 
 @keyframes glowing {
