--- a/01-CSS_Transform/assignment/css/_variables.scss
+++ b/01-CSS_Transform/assignment/css/_variables.scss
@@ -1,13 +1,12 @@
 //colors
 $color1: black;
 $color2: white;
-$color3: #8ecae6;
-$color4: #219ebc;
-$color5: #126782;
-$color6: #023047;
-$color7: #ffb703;
-$color8: #fb8500;
-$color9: #111;
+$color3: #005073;
+$color4: #107dac;
+$color5: #189ad3;
+$color6: #1ebbd7;
+$color7: #71c7ec;
+$color8: #111;
 
 
 //mixins
@@ -17,4 +16,17 @@ $color9: #111;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+
+@mixin glow($background, $top, $left, $width, $height) {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    border-radius: 10px;
+    background: $background;
+    top: $top;
+    left: $left;
+    width: $width;
+    height: $height;
+    
 }
