--- a/01-CSS_Transform/assignment/css/style.css
+++ b/01-CSS_Transform/assignment/css/style.css
@@ -15,6 +15,7 @@ main {
 }
 
 .glow-on-hover {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   width: 220px;
   height: 50px;
   border: none;
@@ -29,19 +30,19 @@ main {
 
 .glow-on-hover:before {
   content: "";
-  background: linear-gradient(45deg, #8ecae6, #219ebc, #126782, #023047, #ffb703, #fb8500);
   position: absolute;
+  z-index: -1;
+  border-radius: 10px;
+  background: linear-gradient(45deg, #189ad3, #005073, #1ebbd7, #005073, #71c7ec, #005073, #107dac);
   top: -2px;
   left: -2px;
-  background-size: 400%;
-  z-index: -1;
-  filter: blur(2px);
   width: calc(100% + 4px);
   height: calc(100% + 4px);
-  animation: glowing 10s linear infinite;
+  background-size: 400%;
+  filter: blur(2px);
+  animation: glowing 20s ease infinite;
   opacity: 0;
-  transition: opacity 0.3s ease-in-out;
-  border-radius: 10px;
+  transition: opacity 0.5s ease-in;
 }
 
 .glow-on-hover:hover:before {
@@ -49,15 +50,15 @@ main {
 }
 
 .glow-on-hover:after {
-  z-index: -1;
   content: "";
   position: absolute;
+  z-index: -1;
+  border-radius: 10px;
+  background: #111;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  background: #111;
-  left: 0;
-  top: 0;
-  border-radius: 10px;
 }
 
 @keyframes glowing {
