--- a/01-CSS_Transform/assignment/css/_button.scss
+++ b/01-CSS_Transform/assignment/css/_button.scss
@@ -1,7 +1,9 @@
+//source code
 //https://dev.to/webdeasy/top-20-css-buttons-animations-f41//
+
+//Initial Button style(font color, size, button color, shape, etc)
 .glow-on-hover {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    
     width: 220px;
     height: 50px;
     border: none;
@@ -11,30 +13,31 @@
     cursor: pointer;
     position: relative;
     z-index: 0;
-    border-radius: 10px;
+    border-radius: 50px;
 }
+//Create button hover effect but keep hidden until hovered over
 .glow-on-hover:before {
-    @include glow(linear-gradient(45deg, $color5, $color3, $color6, $color3, $color7, $color3, $color4), -2px, -2px, calc(100% + 4px), calc(100% + 4px));
+    @include glow(conic-gradient($color1, $color3), -2px, -2px, calc(100% + 4px), calc(100% + 4px));
 
     background-size: 400%;
     filter: blur(2px);
-    animation: glowing 20s ease infinite;
+    animation: glowing 10s ease-in-out infinite;
     opacity: 0;
-    transition: opacity .5s ease-in;
+    transition: opacity .5s ease;
 }
-
+//Make the button hover effect visible while hovering
 .glow-on-hover:hover:before {
     opacity: 1;
 }
-
+//How the button appears after the hover state, returning to dark color and no glow effect
 .glow-on-hover:after {
     @include glow($color8, 0, 0, 100%, 100%);
 
 }
-
+//Glowing animation changing the position of the color at different stages of the animation to give moving color glow effect
 @keyframes glowing {
     0% { 
-        background-position: 0 0; 
+        background-position: 0 0;
     }
     50% { 
         background-position: 400% 0; 
@@ -42,4 +45,7 @@
     100% { 
         background-position: 0 0; 
     }
+}
+.glow-on-hover:active {
+    transform: scale(2);
 }
