added transform comment

--- a/01-CSS_Transform/assignment/css/_button.scss
+++ b/01-CSS_Transform/assignment/css/_button.scss
@@ -46,6 +46,7 @@
         background-position: 0 0; 
     }
 }
+//When clicking the button make the button twice the size
 .glow-on-hover:active {
     transform: scale(2);
 }
