--- a/01-CSS_Transform/assignment/css/_button.scss
+++ b/01-CSS_Transform/assignment/css/_button.scss
@@ -3,7 +3,7 @@
 
 //Initial Button style(font color, size, button color, shape, etc)
 .glow-on-hover {
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
     width: 220px;
     height: 50px;
     border: none;
