--- a/01-CSS_Transform/assignment/css/style.css
+++ b/01-CSS_Transform/assignment/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 .glow-on-hover {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   width: 220px;
   height: 50px;
   border: none;
