--- a/01-CSS_Transform/assignment/css/style.css
+++ b/01-CSS_Transform/assignment/css/style.css
@@ -15,6 +15,9 @@ body {
   align-items: center;
 }
 
+/*source code
+https://dev.to/webdeasy/top-20-css-buttons-animations-f41// */
+/*Initial Button style(font color, size, button color, shape, etc)*/
 .glow-on-hover {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   width: 220px;
@@ -29,6 +32,7 @@ body {
   border-radius: 50px;
 }
 
+/*Create button hover effect but keep hidden until hovered over*/
 .glow-on-hover:before {
   content: "";
   position: absolute;
@@ -46,10 +50,12 @@ body {
   transition: opacity 0.5s ease;
 }
 
+/*Make the button hover effect visible while hovering*/
 .glow-on-hover:hover:before {
   opacity: 1;
 }
 
+/*How the button appears after the hover state, returning to dark color and no glow effect*/
 .glow-on-hover:after {
   content: "";
   position: absolute;
@@ -62,6 +68,7 @@ body {
   height: 100%;
 }
 
+/*Glowing animation changing the position of the color at different stages of the animation to give moving color glow effect*/
 @keyframes glowing {
   0% {
     background-position: 0 0;
@@ -73,6 +80,7 @@ body {
     background-position: 0 0;
   }
 }
+/*When clicking the button make the button twice the size*/
 .glow-on-hover:active {
   transform: scale(2);
 }/*# sourceMappingURL=style.css.map */
