--- a/02-FlexBox/assignment/css/_components.content.scss
+++ b/02-FlexBox/assignment/css/_components.content.scss
@@ -14,7 +14,7 @@
         display: flex;
         justify-content: space-evenly;
 
-        & .navbar_item {
+        & .navbar__item {
             display: inline;
             padding-left: 1em;
             padding-right: 1rem;
