--- a/02-FlexBox/assignment/css/style.scss
+++ b/02-FlexBox/assignment/css/style.scss
@@ -2,6 +2,6 @@
 @import 'base.normalize';
 @import 'settings.variables';
 @import 'settings.responsive';
-@import 'components.broad';
-@import 'components.content';
+@import 'structure.broad';
+@import 'structure.content';
 
