--- a/02-FlexBox/assignment/css/style.scss
+++ b/02-FlexBox/assignment/css/style.scss
@@ -2,6 +2,7 @@
 @import 'base.normalize';
 @import 'core.variables';
 @import 'core.mixins';
+@import 'layout.all';
 @import 'layout.grid';
 @import 'layout.body';
 @import 'layout.responsive';
