added content and adjusted layout

--- a/02-FlexBox/assignment/css/_layout.body.scss
+++ b/02-FlexBox/assignment/css/_layout.body.scss
@@ -3,6 +3,7 @@
 .header {
     @include grid(header, $red);
     @include flex();
+    justify-content: center;
 }
 
 /* Navbar
@@ -12,9 +13,11 @@
 .navbar {
     @include grid(nav, $green);
     @include flex();
+    justify-content: center;
 
     &__list {
         list-style-type: none;
+        margin: .5em;
         padding: 0;
         width: 100%;
         display: flex;
@@ -33,12 +36,16 @@
 .aside {
     @include grid(sidebar, $purple);
     @include flex();
+    padding-left: 1em;
+    padding-right: 1em;
 }
 /* Main
 - apply flex display and orange background to the main content */
 .main {
     @include grid(main, $orange);
     @include flex();
+    padding-left: 1em;
+    padding-right: 1em;
 }
 
 /* Footer
@@ -46,10 +53,12 @@
 .footer {
     @include grid(footer, $blue);
     @include flex();
+    justify-content: center;
 }
 
 /* Content Containers
 - content container for each area/section */
 .container {
     @include flex();
+    text-align: left;
 }
