--- a/02-FlexBox/assignment/css/_core.mixins.scss
+++ b/02-FlexBox/assignment/css/_core.mixins.scss
@@ -10,7 +10,8 @@
 -did not combine with grid mixin so it could be used at other times */
 @mixin flex() {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    //justify-content: center;
     text-align: center;
     align-items: center;
 }
