added text modifier and more content

--- a/02-FlexBox/assignment/css/_layout.all.scss
+++ b/02-FlexBox/assignment/css/_layout.all.scss
@@ -9,3 +9,14 @@ html {
 *:before {
     box-sizing: inherit;
 }
+
+/* Text*/
+h1 {
+    font-size: 20px;
+}
+h2 {
+    font-size: 18px;
+}
+p {
+    font-size: 15px;
+}
