--- a/02-FlexBox/assignment/css/_layout.all.scss
+++ b/02-FlexBox/assignment/css/_layout.all.scss
@@ -12,11 +12,11 @@ html {
 
 /* Text*/
 h1 {
-    font-size: 20px;
+    font-size: 2em;
 }
 h2 {
-    font-size: 18px;
+    font-size: 1.5em;
 }
 p {
-    font-size: 15px;
+    font-size: 1em;
 }
