--- a/assignment4/src/assets/main.css
+++ b/assignment4/src/assets/main.css
@@ -1,9 +1,9 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  /*max-width: 1280px;*/
+  margin: 0;
+  padding: 0;
   font-weight: normal;
 }
 
@@ -13,6 +13,10 @@ a,
   color: hsla(160, 100%, 37%, 1);
   transition: 0.4s;
   padding: 3px;
+}
+
+body {
+  background-color: white;
 }
 
 @media (hover: hover) {
@@ -27,11 +31,11 @@ a,
     place-items: center;
   }
 
-  #app {
+  /* #app {
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
-  }
+  } */
 }
 h1 {
   color: white;
